# withings-exporter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-02-withings-exporter.md
src/: cli.rs  config.rs  lib.rs  main.rs  mappings.rs  metrics.rs  otlp.rs  poll.rs  state.rs
src/cmd/: auth_url.rs  dump_state.rs  exchange.rs  mod.rs  poll_cmd.rs
src/withings/: auth.rs  client.rs
src/withings/api/: activity.rs  intraday.rs  measure.rs  mod.rs  sleep.rs  workouts.rs
tests/: integration.rs
tests/fixtures/: getactivity.json  getintraday.json  getmeas.json  getnonce.json  getsleep.json  getworkouts.json  requesttoken_refresh.json
