[package]
name = "withings-exporter"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT"
description = "Pulls Withings health data and exports as OTLP metrics."

[lib]
path = "src/lib.rs"

[[bin]]
name = "withings-exporter"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
jiff = { version = "0.1", features = ["serde"] }
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "metrics", "reqwest-client"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
rand = "0.8"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
